--- a/package.json
+++ b/package.json
@@ -3,17 +3,29 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/lib/index.d.ts",
+  "main": "./dist/remote-images-for-next.umd.cjs",
+  "module": "./dist/remote-images-for-next.js",
+  "exports": {
+    ".": {
+      "import": "./dist/remote-images-for-next.js",
+      "require": "./dist/remote-images-for-next.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/node": "^20.8.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
