--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "scripts": {
-    "dev": "vite",
+    "sandbox": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
