--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unicorn": "^48.0.1",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
+    "postcss-preset-env": "^9.2.0",
     "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
