--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Personal Linting */
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": false
   },
-  "include": ["sandbox"],
+  "include": ["sandbox", "scripts", "lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
