Set Vite lib project with playground web page (#1)
* Set Vite to build a library
  * Add sourcemap for production
  * Remove deps and peerDeps from build output

* Add build tsconfig to emit type declaration files
  * During build, type check only lib entrypoint, but leave its
    transpilation to esbuild
  * Add type-check command to type check the whole project,
    in CI for instance

* Add svgr support

* Move app files and config to sandbox

* Add eslint config and prettier and fix issues

* Add css nesting support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Personal Linting */
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": false
   },
-  "include": ["src"],
+  "include": ["sandbox", "scripts", "lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
