--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "format:check": "prettier --check .",
     "type-check": "tsc"
   },
-  "dependencies": {},
-  "peerDependencies": {},
+  "dependencies": {
+    "plaiceholder": "^3.0.0",
+    "sharp": "^0.32.6"
+  },
   "devDependencies": {
+    "@google-cloud/storage": "^7.4.0",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -52,6 +55,7 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
+    "tsx": "^3.14.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-svgr": "^4.1.0"
