--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tsx": "^3.14.0",
     "typescript": "^5.0.2",
     "vite": "^4.5.1",
+    "vite-plugin-inspect": "^0.8.1",
     "vite-plugin-svgr": "^4.1.0"
   }
 }
